marriage and divorce with confounders

--- a/Heights Dataset.ipynb
+++ b/Heights Dataset.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "We will model height using a normal distribution - the observed heights are sampled from a normal distribution described by:\n",
     "\n",
-    "#### ${h_i = \\mathcal{N}(\\mu, \\sigma}$)\n",
+    "#### ${h_i \\sim \\mathcal{N}(\\mu_i, \\sigma}$)\n",
     "\n",
     "Using the priors: \n",
     "\n",
@@ -340,11 +340,11 @@
     "\n",
     "Here the observed height is still sampled from a normal described by:\n",
     "\n",
-    "#### ${h_i = \\mathcal{N}(\\mu, \\sigma}$)\n",
+    "#### ${h_i = \\mathcal{N}(\\mu_i, \\sigma}$)\n",
     "\n",
     "However, the mean of the normal distribution varies with the weight. So the height of an individual i is sampled from a normal distribution who's mean is influenced by the weight like so:\n",
     "\n",
-    "#### ${\\mu = \\alpha + \\beta x_i}$\n",
+    "#### ${\\mu_i = \\alpha + \\beta * weight_i}$\n",
     "\n",
     "#### Priors \n",
     "\n",
