looking at the relationship between neocortex and energy content in milk of primates

--- a/Kayak-Rentals.ipynb
+++ b/Kayak-Rentals.ipynb
@@ -9,6 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/harshil/miniconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -619,10 +621,8 @@
     }
    ],
    "source": [
-    "data_path = '/home/harshil/Kayakrentals/'\n",
-    "\n",
-    "train = pd.read_csv(data_path + 'train.csv')\n",
-    "test = pd.read_csv(data_path + 'test.csv')\n",
+    "train = pd.read_csv('Data/train.csv')\n",
+    "test = pd.read_csv('Data/test.csv')\n",
     "\n",
     "print('Train')\n",
     "display(train.info())\n",
